# workset

./: CHANGELOG.md  Cargo.toml  README.md  shell.nix
.github/assets/: main.tape
src/: lib.rs  main.rs  tui.rs
src/remote/: github.rs  gitlab.rs  mod.rs
src/tui/: app.rs  metadata.rs  mod.rs  tree.rs  watcher.rs
tests/: integration_tests.rs
