[package]
name = "workset"
description = "Manage git repos with worksets"
version = "0.1.1"
edition = "2024"
authors = ["cilki"]
repository = "https://github.com/fossable/workset/"
readme = "README.md"
license = "Unlicense"
keywords = ["git", "workspace", "cli", "repository", "manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
cmd_lib = "1.9.6"
crossterm = { version = "0.29", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
gix = "0.75"
home = "0.5"
log = "0.4"
pico-args = "0.5"
ratatui = { version = "0.29", optional = true }
regex = "1.12.2"
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
built = { version = "0.8", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }

[features]
default = ["github", "gitlab", "tui"]
github = ["dep:serde_json"]
gitlab = []
tui = ["dep:crossterm", "dep:ratatui", "dep:fuzzy-matcher"]
