[package]
name = "workset"
description = "Manage git repos with worksets"
version = "0.2.0"
edition = "2024"
authors = ["cilki"]
repository = "https://github.com/fossable/workset/"
readme = "README.md"
license = "Unlicense"
keywords = ["git", "workspace", "cli", "repository", "manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
cmd_lib = "1.9.6"
crossterm = { version = "0.29", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
gix = "0.75"
home = "0.5"
notify = { version = "6.1", optional = true }
pico-args = "0.5"
ratatui = { version = "0.29", optional = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
built = { version = "0.8", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui", "dep:fuzzy-matcher", "dep:notify"]
